added missing tests